--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+
 dependencies {
-    compile files('./build/libs/bzip2.jar')
+    compile files('./build/libs/commons-compress-1.8.jar')
 }
