added search using lucene

--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 	compile files('./build/libs/xuggle-xuggler-5.4.jar')
 	compile files('./build/libs/lucene-core-4.8.0.jar')
 	compile files('./build/libs/lucene-analyzers-common-4.8.0.jar')
+	compile files('./build/libs/lucene-queryparser-4.8.0.jar')
 }
