--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,22 @@ dependencies {
 	compile files('./build/libs/lucene-analyzers-common-4.8.0.jar')
 	compile files('./build/libs/lucene-queryparser-4.8.0.jar')
 }
+
+version = '1.1'
+
+jar {
+	manifest {
+		attributes 'Implementation-Title' : 'Volcano P2P Client' ,
+		'Implementation-Version' : version,
+		'Class-Path':'.',
+		'Main-Class': 'control.Driver'
+	}
+}
+
+uploadArchives {
+	repositories {
+		flatDir {
+			dirs 'repos'
+		}
+	}
+}
