--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'java'
 
 dependencies {
-	compile files('./build/libs/xuggle-xuggler-5.4.jar')
-	compile files('./build/libs/lucene-core-4.8.0.jar')
-	compile files('./build/libs/lucene-analyzers-common-4.8.0.jar')
-	compile files('./build/libs/lucene-queryparser-4.8.0.jar')
+	compile files('./build/libs/dagger-1.2.2.jar')
+	compile files('./build/libs/dagger-compiler-1.2.2.jar')
 }
 
 version = '1.1'
