--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
-	compile files('./build/libs/dagger-1.2.2.jar')
-	compile files('./build/libs/dagger-compiler-1.2.2.jar')
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 version = '1.1'
