--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'java'
 
+//apply plugin: 'idea'
+//task initSourceFolders { // add << before { to prevent executing during configuration phase
+//	sourceSets*.java.srcDirs*.each { it.mkdirs() }
+//	sourceSets*.resources.srcDirs*.each { it.mkdirs() }
+//}
+
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
 }
