--- a/src/main/resources/settings.json
+++ b/src/main/resources/settings.json
@@ -6,5 +6,6 @@
   "user_details":{
     "username":"testman",
     "password":"whoknows"
-  }
+  },
+  "client_supports":["UserCommand", "TTHSearch"]
 }
