Refactored connect code. Hub still doesn't respond after lock
Split the code for connecting into multiple segments. These can
now be reused in the future. The hub still does not respond after
sending it the key. Need to check what the problem is.

--- a/src/main/resources/settings.json
+++ b/src/main/resources/settings.json
@@ -1,11 +1,13 @@
 {
   "hub_connect":{
-    "address" : "dchub://verlihub.org",
-    "port" : 4111
+    "address" : "sniper.redirectme.net",
+    "port" : 411
   },
   "user_details":{
     "username":"testman",
-    "password":"whoknows"
+    "password":"whoknows",
+    "description":"who knows man",
+    "email":"androidpot107@gmail.com"
   },
   "client_supports":["UserCommand", "TTHSearch"]
 }
